# ChangeLog for x11-themes/gtk-engines-nimbus
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-nimbus/ChangeLog,v 1.19 2009/02/12 13:06:33 flameeyes Exp $

*gtk-engines-nimbus-0.1.2 (12 Feb 2009)

  12 Feb 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -gtk-engines-nimbus-0.0.17.ebuild, +gtk-engines-nimbus-0.1.2.ebuild:
  Version bump and remove old version.

  20 Dec 2008; Thomas Anderson <gentoofan23@gentoo.org>
  gtk-engines-nimbus-0.1.1.ebuild:
  stable amd64, bug 251517

  18 Dec 2008; <ssuominen@gentoo.org> gtk-engines-nimbus-0.1.1.ebuild:
  Add pkg_preinst and pkg_postrm phases for gtk-update-icon-cache.
  Fix test suite and mark it stable for x86.

  15 Oct 2008; Diego Pettenò <flameeyes@gentoo.org>
  gtk-engines-nimbus-0.1.0.ebuild, gtk-engines-nimbus-0.1.1.ebuild:
  Don't inherit autotools (and thus depend on them) for 0.1 series.

*gtk-engines-nimbus-0.1.1 (15 Oct 2008)

  15 Oct 2008; Diego Pettenò <flameeyes@gentoo.org>
  +gtk-engines-nimbus-0.1.1.ebuild:
  Version bump.

  06 Oct 2008; Thomas Anderson <gentoofan23@gentoo.org>
  gtk-engines-nimbus-0.0.17.ebuild:
  stable amd64, bug #239861 --- Tested by Victor

  05 Oct 2008; Diego Pettenò <flameeyes@gentoo.org>
  gtk-engines-nimbus-0.0.12.ebuild, gtk-engines-nimbus-0.0.17.ebuild,
  gtk-engines-nimbus-0.1.0.ebuild:
  Add pkgconfig dependency, thanks Patrick in bug #239649.

*gtk-engines-nimbus-0.1.0 (30 Sep 2008)

  30 Sep 2008; Diego Pettenò <flameeyes@gentoo.org>
  +gtk-engines-nimbus-0.1.0.ebuild:
  Version bump, first 0.1 release.

*gtk-engines-nimbus-0.0.17 (29 Aug 2008)

  29 Aug 2008; Diego Pettenò <flameeyes@gentoo.org>
  -gtk-engines-nimbus-0.0.16.ebuild, +gtk-engines-nimbus-0.0.17.ebuild:
  Version bump, thanks to Àngel Díaz in bug #235447.

*gtk-engines-nimbus-0.0.16 (06 Jun 2008)

  06 Jun 2008; Diego Pettenò <flameeyes@gentoo.org>
  +gtk-engines-nimbus-0.0.16.ebuild:
  Version bump.
