@@ -1,6 +1,4 @@
-DIST nimbus-0.1.1.tar.bz2 9626481 RMD160 b4fa844ca36e745f2f4bf8e79a8088ab6b0ce84c SHA1 4002ac5182328a5837bbc8875f8131a657bf368d SHA256 7a10158d3891fd08b88b56eff9e7a2c727639da5f1203ee34451a31da15d0f7e
 DIST nimbus-0.1.2.tar.bz2 9619411 RMD160 a0f8a3b7040bd54be143705ebbcf13af3d1a48c3 SHA1 e82d6a854fb8d99aa09dff69d4752f662390e9cb SHA256 69ab455e275ef7a9a384d39972662aba724abe49e7c59a02fec8ff6de603c534
-EBUILD gtk-engines-nimbus-0.1.1.ebuild 1159 RMD160 adf783773b83da3c4900393b8fb60f9c67a634ff SHA1 279c8b4da7145db6eb2d67e0f680617c36697d52 SHA256 0042b50987a7ec2bc4f96c076e37c18f64e45c95c29f12478a076fe50b49fac4
-EBUILD gtk-engines-nimbus-0.1.2.ebuild 1215 RMD160 9cf0ada7c3b5761e70498507e5af17e8e76bbf58 SHA1 de777417089b8a99bf3affebe1fa6763afdcc00b SHA256 62b0220965d55c6020500df34922ebcbdcef6760622129bd94835886b62b0d0f
-MISC ChangeLog 3417 RMD160 035d4ef12b790065e61c709bf178143eaeef0411 SHA1 a60595ae5dd142fe0b9e6fc815828a08f9a5b2c1 SHA256 4cad8b8e0fce3dce7b2165465574395317397b361474ecb65bea3e07bee71ccb
-MISC metadata.xml 266 RMD160 31bcc7e4ff3a3a18215d1f58d1a44759281f0d06 SHA1 3314d81ce6992ddae53719977c7e21c932e3d02b SHA256 0c0bd055946ae1d04e1135b20cb4e1a8a4866a98fe5c855270928aa9443b9405
+EBUILD gtk-engines-nimbus-0.1.2.ebuild 1200 RMD160 3e92be5ecc66925b976618581268be54c7c65fe4 SHA1 b291a0c43ee40de61e944cf2f98c48aca7e43b21 SHA256 81d36e3525bc6bc7df5992059832bb040d176d7e7e6d551d1f8d0a030e0bf410
+MISC ChangeLog 3739 RMD160 c03349bc0dd7dde306fee889d217e735593d1bfe SHA1 6c3509e3667e26cca192e6e31c9800c49deeb592 SHA256 fc2495cc1172e715fd0c677253274fe92d9f5d762648c180fd61dcf73a3ed5f6
+MISC metadata.xml 258 RMD160 208346ade3ec3d863942c15a657e2a3235caf245 SHA1 b25bf405b49c9881c7d2c11070c0e791d187c575 SHA256 728dbb2bd7687210dbf2fc37942ea694208d443cf5038064eb6e52077898b777
