@@ -1,53 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-nimbus/gtk-engines-nimbus-0.1.1.ebuild,v 1.5 2008/12/20 13:29:31 gentoofan23 Exp $
-
-inherit gnome2-utils
-
-MY_PN=nimbus
-MY_P=${MY_PN}-${PV}
-
-DESCRIPTION="Nimbus GTK+ Engine from Sun JDS"
-HOMEPAGE="http://dlc.sun.com/osol/jds/downloads/extras/nimbus/"
-SRC_URI="http://dlc.sun.com/osol/jds/downloads/extras/nimbus/${MY_P}.tar.bz2"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux"
-IUSE=""
-
-RDEPEND=">=x11-libs/gtk+-2.6"
-DEPEND="${RDEPEND}
-	dev-util/pkgconfig
-	>=x11-misc/icon-naming-utils-0.8.1
-	dev-util/intltool"
-
-S=${WORKDIR}/${MY_P}
-
-src_unpack() {
-	unpack ${A}
-	# Fix src_test.
-	echo dark-index.theme.in >> "${S}"/po/POTFILES.skip
-}
-
-src_compile() {
-	econf --disable-dependency-tracking
-	emake || die "emake failed."
-}
-
-src_install() {
-	emake DESTDIR="${D}" install || die "emake install failed."
-	dodoc AUTHORS ChangeLog
-}
-
-pkg_preinst() {
-	gnome2_icon_savelist
-}
-
-pkg_postinst() {
-	gnome2_icon_cache_update
-}
-
-pkg_postrm() {
-	gnome2_icon_cache_update
-}
