@@ -1,11 +1,11 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-nimbus/gtk-engines-nimbus-0.1.2.ebuild,v 1.1 2009/02/12 13:06:33 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-nimbus/gtk-engines-nimbus-0.1.2.ebuild,v 1.3 2009/06/01 11:53:44 maekke Exp $
 
+EAPI=2
 inherit gnome2-utils autotools
 
-MY_PN=nimbus
-MY_P=${MY_PN}-${PV}
+MY_P=nimbus-${PV}
 
 DESCRIPTION="Nimbus GTK+ Engine from Sun JDS"
 HOMEPAGE="http://dlc.sun.com/osol/jds/downloads/extras/nimbus/"
@@ -16,41 +16,32 @@ SLOT="0"
 KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux"
 IUSE=""
 
-RDEPEND=">=x11-libs/gtk+-2.6"
+RDEPEND=">=x11-libs/gtk+-2.6:2"
 DEPEND="${RDEPEND}
-	dev-util/pkgconfig
 	>=x11-misc/icon-naming-utils-0.8.1
+	dev-util/pkgconfig
 	dev-util/intltool"
 
 S=${WORKDIR}/${MY_P}
 
-src_unpack() {
-	unpack ${A}
-	# Fix src_test.
-	echo dark-index.theme.in >> "${S}"/po/POTFILES.skip
+src_prepare() {
+	echo light-index.theme.in >> po/POTFILES.skip
+	echo dark-index.theme.in >> po/POTFILES.skip
 
-	cd "${S}"
 	eautoreconf # required for interix
 }
 
-src_compile() {
-	econf --disable-dependency-tracking
-	emake || die "emake failed."
+src_configure() {
+	econf \
+		--disable-dependency-tracking \
+		--disable-static
 }
 
 src_install() {
-	emake DESTDIR="${D}" install || die "emake install failed."
+	emake DESTDIR="${D}" install || die "emake install failed"
 	dodoc AUTHORS ChangeLog
 }
 
-pkg_preinst() {
-	gnome2_icon_savelist
-}
-
-pkg_postinst() {
-	gnome2_icon_cache_update
-}
-
-pkg_postrm() {
-	gnome2_icon_cache_update
-}
+pkg_preinst() { gnome2_icon_savelist; }
+pkg_postinst() { gnome2_icon_cache_update; }
+pkg_postrm() { gnome2_icon_cache_update; }
