@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
-
 <pkgmetadata>
-  <herd>no-herd</herd>
-  <maintainer>
-    <email>flameeyes@gentoo.org</email>
-    <name>Diego Pettenò</name>
-  </maintainer>
+	<herd>no-herd</herd>
+	<maintainer>
+		<email>flameeyes@gentoo.org</email>
+		<name>Diego Pettenò</name>
+	</maintainer>
 </pkgmetadata>
